--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,9 @@ body {
 }
 #pokemon #pokemonInput .pointer:active { box-shadow: inset 0 0 3px #000 }
 #pokemon #pokemonInput #inputs {
+    border-radius: 8px;
+    z-index: 1;
+
     position: absolute;
     bottom: -9px;
     left: 50%;
@@ -95,8 +98,7 @@ body {
 
 #pokemon #pokemonInput #btnTry {
     position: absolute;
-    z-index: -1;
-    /* bottom: -20px; */
+    z-index: 0;
     bottom: -9px;
     left: 50%;
 
@@ -106,8 +108,8 @@ body {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 
-    animation: showing 1.1s ease-in-out forwards 3s, z-index .1s forwards 4.5s;
-    /* animation: showing 1s ease-in-out forwards; */
+    animation: showing 1.1s ease-in-out forwards 3s;
+
     background-color: var(--color05);
     color: var(--color07);
 }
